[package]
name = "rusty-chain"
version = "0.1.0"
authors = ["Jerome Gagnon <jerome.gagnon.1@gmail.com>"]

[dependencies]
bincode = "0.9"
chrono = "0.4"
log = "0.4"
pnet = "0.20.0"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3"
rust-crypto = "0.2"
reqwest = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.5", features = ["v4"] }
